# cwatlas-collector

./: .gitignore  CLAUDE.md  DESIGN.md  NOTICE  README.md  config.example.toml  pyproject.toml
.codebase-memory/: artifact.json  graph.db.zst
.github/workflows/: ci.yml
cwatlas_collector.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
cwatlas_dash/: __init__.py  __main__.py  app.py  sources.py  telemetry.py
cwatlas_dash/static/: dash.css  dash.js
cwatlas_dash/templates/: index.html
cwatlas_mcp/: __init__.py  capture.py  catalog.py  config.py  detector.py  dsp.py  migrations.py  models.py  provenance.py  ptt.py  runtime.py  scheduler.py  sdr_client.py  server.py  solar.py
deploy/: cwatlas-collector.service  cwatlas-dash.service
docs/: provenance.md  sigmf_listen.md
docs/sessions/: 2026-07-01_first-light-to-first-soak.md  2026-07-03_m3-m4-and-migration.md  2026-07-16_provenance.md  2026-07-18_crash-recovery-and-collision.md
docs/superpowers/plans/: 2026-07-03-cwatlas-dashboard.md
docs/superpowers/specs/: 2026-07-03-cwatlas-dashboard-design.md
scripts/: backfill_orphans.py  flag_truncated_collisions.py  iq_capture_probe.py  m0_wf_probe.py  m1_wf_scan.py  sigmf_listen.py  snd_capacity_probe.py
tests/: conftest.py  test_backfill_orphans.py  test_capture_collision.py  test_capture_events.py  test_capture_finalize.py  test_config.py  test_dash_app.py  test_dash_catalog.py  test_dash_catalog_live.py  test_dash_frontend.py  test_dash_package.py  test_dash_provenance.py  test_dash_sdr.py  test_dash_solar.py  test_dash_system.py  test_flag_truncated_collisions.py  test_migration.py  test_provenance.py
