[project]
name = "cwatlas-collector"
version = "0.0.1"
description = "Autonomous CW search→capture collector + MCP control plane for the Web-888 SDR (CWAtlas / MorseBase)"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2",          # MCP Python SDK (FastMCP)
    "httpx>=0.27",       # AJAX info plane
    "websockets>=12",    # WS control plane (/W/F, /SND, /EXT)
    "numpy>=1.26",       # search-plane DSP (detector)
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.6"]
dash = ["flask>=3"]

[project.scripts]
cwatlas-collector = "cwatlas_mcp.runtime:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["cwatlas_mcp", "cwatlas_dash"]

[tool.setuptools.package-data]
cwatlas_dash = ["templates/*", "static/*"]
