[project]
name = "cwatlas-collector"
version = "0.0.1"
description = "Autonomous CW search→capture collector + MCP control plane for the Web-888 SDR (CWAtlas / MorseBase)"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "Daniel Nelms", email = "xretsalb@gmail.com" }]
keywords = ["sdr", "morse", "cw", "ham-radio", "amateur-radio", "hf",
            "signal-processing", "sigmf", "dataset", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Ham Radio",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "mcp>=1.2",          # MCP Python SDK (FastMCP)
    "httpx>=0.27",       # AJAX info plane
    "websockets>=12",    # WS control plane (/W/F, /SND, /EXT)
    "numpy>=1.26",       # search-plane DSP (detector)
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.6"]
dash = [
    "flask>=3",
    "opentelemetry-api>=1.26",
    "opentelemetry-sdk>=1.26",
    "opentelemetry-exporter-otlp-proto-http>=1.26",
]

[project.scripts]
cwatlas-collector = "cwatlas_mcp.runtime:main"

[build-system]
# >=77 for PEP 639 (`license` as an SPDX string + `license-files`); older
# setuptools rejects both.
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["cwatlas_mcp", "cwatlas_dash"]

[tool.setuptools.package-data]
cwatlas_dash = ["templates/*", "static/*"]
